tests/valid/trait/method_call_short_ufcs_expr_receiver.facet
trait RunValue {
  fn run(self: Self) -> unrestricted isize;
}

impl RunValue for unrestricted isize {
  fn run(self: Self) -> unrestricted isize {
    self
  }
}

fn main() -> unrestricted isize {
  (RunValue::run 1)
}
