tests/invalid/struct/duplicate_impl.facet
trait Show;

struct Pair {
  x: unrestricted isize
}

impl Show for unrestricted Pair;
impl Show for unrestricted Pair;

fn main() -> unrestricted () {
  ()
}
